--- a/D_car_2025/D_car_2025/mdk/Objects/MM32F327X_G8P.build_log.htm
+++ b/D_car_2025/D_car_2025/mdk/Objects/MM32F327X_G8P.build_log.htm
@@ -21,16 +21,16 @@ Target DLL:      CMSIS_AGDI.dll V1.33.22.0
 Dialog DLL:      TCM.DLL V1.56.6.0
  
 <h2>Project:</h2>
-D:\Desktop\D_car_2025\D_car_2025\mdk\mm32f327x_g8p.uvprojx
+D:\smartcar\lwx-smartcar2025\D_car_2025\D_car_2025\mdk\mm32f327x_g8p.uvprojx
 Project File Date:  06/30/2025
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.23', folder: 'D:\keil5-ARM-5.42a\ARM\ARMCLANG\Bin'
 Build target 'mm32f327x_g8p_project'
-compiling key.c...
+compiling main.c...
 compiling auto_menu.c...
 linking...
-Program Size: Code=29040 RO-data=3212 RW-data=184 ZI-data=15564  
+Program Size: Code=37680 RO-data=3428 RW-data=272 ZI-data=60780  
 ".\Objects\MM32F327X_G8P.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
@@ -44,7 +44,7 @@ Package Vendor: MindMotion
   D:/keil5-ARM-5.42a/PACK/MindMotion/MM32F3270_DFP/1.0.5/Device/MM32F327x/Include
 
 <h2>Collection of Component Files used:</h2>
-Build Time Elapsed:  00:00:02
+Build Time Elapsed:  00:00:12
 </pre>
 </body>
 </html>
