--- a/D_car_2025/D_car_2025/mdk/Objects/MM32F327X_G8P.build_log.htm
+++ b/D_car_2025/D_car_2025/mdk/Objects/MM32F327X_G8P.build_log.htm
@@ -22,14 +22,14 @@ Dialog DLL:      TCM.DLL V1.56.6.0
  
 <h2>Project:</h2>
 D:\smartcar\lwx-smartcar2025\D_car_2025\D_car_2025\mdk\mm32f327x_g8p.uvprojx
-Project File Date:  06/30/2025
+Project File Date:  07/02/2025
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.23', folder: 'D:\keil5-ARM-5.42a\ARM\ARMCLANG\Bin'
 Build target 'mm32f327x_g8p_project'
-compiling auto_menu.c...
+compiling main.c...
 linking...
-Program Size: Code=38288 RO-data=3428 RW-data=272 ZI-data=83340  
+Program Size: Code=42544 RO-data=3764 RW-data=288 ZI-data=105444  
 ".\Objects\MM32F327X_G8P.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
