--- a/D_car_2025/D_car_2025/mdk/Objects/MM32F327X_G8P.build_log.htm
+++ b/D_car_2025/D_car_2025/mdk/Objects/MM32F327X_G8P.build_log.htm
@@ -27,10 +27,9 @@ Project File Date:  07/02/2025
 <h2>Output:</h2>
 *** Using Compiler 'V6.23', folder: 'D:\keil5-ARM-5.42a\ARM\ARMCLANG\Bin'
 Build target 'mm32f327x_g8p_project'
-compiling key.c...
-compiling auto_menu.c...
+compiling main.c...
 linking...
-Program Size: Code=47744 RO-data=3868 RW-data=320 ZI-data=106452  
+Program Size: Code=47952 RO-data=3856 RW-data=304 ZI-data=106460  
 ".\Objects\MM32F327X_G8P.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
@@ -44,7 +43,7 @@ Package Vendor: MindMotion
   D:/keil5-ARM-5.42a/PACK/MindMotion/MM32F3270_DFP/1.0.5/Device/MM32F327x/Include
 
 <h2>Collection of Component Files used:</h2>
-Build Time Elapsed:  00:00:03
+Build Time Elapsed:  00:00:02
 </pre>
 </body>
 </html>
