--- a/D_car_2025/D_car_2025/mdk/Objects/MM32F327X_G8P.build_log.htm
+++ b/D_car_2025/D_car_2025/mdk/Objects/MM32F327X_G8P.build_log.htm
@@ -22,14 +22,14 @@ Dialog DLL:      TCM.DLL V1.56.6.0
  
 <h2>Project:</h2>
 D:\smartcar\lwx-smartcar2025\D_car_2025\D_car_2025\mdk\mm32f327x_g8p.uvprojx
-Project File Date:  07/05/2025
+Project File Date:  07/08/2025
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.23', folder: 'D:\keil5-ARM-5.42a\ARM\ARMCLANG\Bin'
 Build target 'mm32f327x_g8p_project'
-compiling pid.c...
+compiling Image Binarization.c...
 linking...
-Program Size: Code=47072 RO-data=4012 RW-data=304 ZI-data=129532  
+Program Size: Code=45984 RO-data=3648 RW-data=272 ZI-data=106904  
 ".\Objects\MM32F327X_G8P.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
@@ -43,7 +43,7 @@ Package Vendor: MindMotion
   D:/keil5-ARM-5.42a/PACK/MindMotion/MM32F3270_DFP/1.0.5/Device/MM32F327x/Include
 
 <h2>Collection of Component Files used:</h2>
-Build Time Elapsed:  00:00:04
+Build Time Elapsed:  00:00:02
 </pre>
 </body>
 </html>
