--- a/D_car_2025/D_car_2025/mdk/Objects/MM32F327X_G8P.build_log.htm
+++ b/D_car_2025/D_car_2025/mdk/Objects/MM32F327X_G8P.build_log.htm
@@ -27,17 +27,10 @@ Project File Date:  07/13/2025
 <h2>Output:</h2>
 *** Using Compiler 'V6.23', folder: 'D:\keil5-ARM-5.42a\ARM\ARMCLANG\Bin'
 Build target 'mm32f327x_g8p_project'
-../USER/src/main.c(95): warning: incompatible pointer types passing 'uint8[120][188]' (aka 'unsigned char[120][188]') to parameter of type 'uint8 *' (aka 'unsigned char *') [-Wincompatible-pointer-types]
-   95 |                                 threshold = otsu_get_threshold(image_copy, MT9V03X_W, MT9V03X_H); // 图像获取阈值
-      |                                                                ^~~~~~~~~~
-../code\Image Binarization.h(15): note: passing argument to parameter 'image' here
-   15 | int otsu_get_threshold(uint8 *image, uint16 col, uint16 row);
-      |                               ^
-1 warning generated.
-compiling main.c...
+compiling image.c...
 linking...
-Program Size: Code=54776 RO-data=4008 RW-data=296 ZI-data=87176  
-".\Objects\MM32F327X_G8P.axf" - 0 Error(s), 1 Warning(s).
+Program Size: Code=62152 RO-data=4140 RW-data=304 ZI-data=87180  
+".\Objects\MM32F327X_G8P.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -50,7 +43,7 @@ Package Vendor: MindMotion
   D:/keil5-ARM-5.42a/PACK/MindMotion/MM32F3270_DFP/1.0.5/Device/MM32F327x/Include
 
 <h2>Collection of Component Files used:</h2>
-Build Time Elapsed:  00:00:04
+Build Time Elapsed:  00:00:03
 </pre>
 </body>
 </html>
